Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38152

QStatusBar does not follow QMainWindow margins

XMLWordPrintable

    • 4958cadeda4baf20f74f6b46689ca05d3f2b7875 (5.4, 3.12.2014, 5.4.1)

      QStatusbar does not follow margins set to QMainWindow. When changing QMainWindow margins calling setContentMargings changes are not reflected to QStatusBar as expected.

      Sample application and screen shots attached.

        1. marginsDemo.zip
          24 kB
          Antti Yli-Tokola
        2. qtbug38152.zip
          20 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-38152
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            anylitok Antti Yli-Tokola (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes