QMainWindow: Observe left contents margin when positioning status bar.

Task-number: QTBUG-38152
Change-Id: I4c762a113dbfe47472d1087aa34c0e327083ee16
Reviewed-by: Jan Arve Sæther <jan-arve.saether@theqtcompany.com>

cregit: 4958cadeda4baf20f74f6b46689ca05d3f2b7875 https://github.com/qt/qtbase/commit/4958cadeda4baf20f74f6b46689ca05d3f2b7875